# pills

./: README  README.md  dockerfile  go.mod  go.sum  main.go  main.py  pyproject.toml  pyrightconfig.json  start.sh
config/: config.go
